Send 3 different confirmation emails (#416)
- If a user opts into receiving emails, they will now receive 3 emails: a short confirmation email, a next steps email, and (a day later, if they have document recommendations and have not uploaded documents) a document reminder email
- Users who do not opt into receiving emails will still get the old, full confirmation email.
- Rename SuccessMessageService -> NextStepsContentService and consolidate its methods
- add some generic sendEmail methods to EmailClient
- Add `applicationData.getLocale()` method

[finishes #179415712]

Co-authored-by: Luigi Ray-Montanez <luigi@codeforamerica.org>